SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdepim/; revision=848123

--- a/korganizer_configcolors.desktop
+++ b/korganizer_configcolors.desktop
@@ -154,7 +154,7 @@ Keywords[et]=korganizer,värvid
 Keywords[eu]=korganizer,koloreak
 Keywords[fa]=korganizer،رنگها
 Keywords[fi]=korganizer,värit
-Keywords[fr]=KOrganizer,couleurs
+Keywords[fr]=korganizer,couleurs
 Keywords[fy]=korganizer,colors,kleuren
 Keywords[ga]=korganizer,dathanna
 Keywords[gl]=korganizer,cores
