--- a/korganizer_configdesignerfields.desktop
+++ b/korganizer_configdesignerfields.desktop
@@ -128,7 +128,7 @@ Keywords[et]=korganizer, seadistamine, seadistused, omaloodud väljad
 Keywords[eu]=korganizer, konfiguratu, ezarpenak, eremu pertsonalizatuak
 Keywords[fa]=korganizer، پیکربندی، تنظیمات، حوزه‌های سفارشی
 Keywords[fi]=kaddressbook, aseta, asetukset,omat kentät
-Keywords[fr]=KOrganizer, configuration, configurer, champs personnalisés
+Keywords[fr]=korganizer, configuration, configurer, champs personnalisés
 Keywords[fy]=korganizer, configuratie, instellingen, ynstellings, oanpaste fjilden, aangepaste velden
 Keywords[ga]=korganizer, cumraigh, socruithe, réimsí saincheaptha
 Keywords[gl]=korganizer, configurar, opcións, campos personalizados
