--- a/korganizer_configfonts.desktop
+++ b/korganizer_configfonts.desktop
@@ -151,7 +151,7 @@ Keywords[et]=korganizer,fondid
 Keywords[eu]=korganizer,letra-tipoak
 Keywords[fa]=korganizer،قلمها
 Keywords[fi]=korganizer,kirjasimet
-Keywords[fr]=KOrganizer,polices
+Keywords[fr]=korganizer,polices
 Keywords[fy]=korganizer,fonts,lettertypen
 Keywords[ga]=korganizer,clónna,clófhoirne
 Keywords[gl]=korganizer,fontes
