--- a/korganizer_configfreebusy.desktop
+++ b/korganizer_configfreebusy.desktop
@@ -128,7 +128,7 @@ Keywords[et]=korganizer,vaba,hõivatud,ajakava
 Keywords[eu]=korganizer,libre, lanpetuta,antolaketa
 Keywords[fa]=korganizer،آزاد اشغال، زمان‌بندی
 Keywords[fi]=korganizer,vapaa,varattu,ajastus
-Keywords[fr]=KOrganizer,disponibilité, planification
+Keywords[fr]=korganizer,disponibilité, planification
 Keywords[fy]=korganizer,freebusy,scheduling,plannen,frij,beset,roaster
 Keywords[gl]=korganizer,dispoñibilidade,axenda
 Keywords[hi]=के-आर्गेनाइज़र,फ्री-बिज़ी,समय-सारणी
