--- a/korganizer_configgroupautomation.desktop
+++ b/korganizer_configgroupautomation.desktop
@@ -129,7 +129,7 @@ Keywords[et]=korganizer,grupid,grupitöö
 Keywords[eu]=korganizer,taldea,automatizazioa
 Keywords[fa]=korganizer،گروه، خودکارسازی
 Keywords[fi]=korganizer,ryhmä,automaatio
-Keywords[fr]=KOrganizer,groupes,automatisation
+Keywords[fr]=korganizer,groupes,automatisation
 Keywords[fy]=korganizer,groep,automatisearring
 Keywords[gl]=korganizer,grupo,automatización
 Keywords[hi]=के-आर्गेनाइज़र,समूह,स्वचालन
