--- a/korganizer_configgroupscheduling.desktop
+++ b/korganizer_configgroupscheduling.desktop
@@ -128,7 +128,7 @@ Keywords[et]=korganizer,grupid,grupitöö,ajakavad
 Keywords[eu]=korganizer,taldea,antolaketa
 Keywords[fa]=korganizer،گروه، زمان‌بندی
 Keywords[fi]=korganizer,ryhmä,ajastus
-Keywords[fr]=KOrganizer,groupes,planification
+Keywords[fr]=korganizer,groupes,planification
 Keywords[fy]=korganizer,group,scheduling,plannen,groep
 Keywords[gl]=korganizer,grupo,programar
 Keywords[hu]=korganizer,csoport,szervezés
