--- a/korganizer_configmain.desktop
+++ b/korganizer_configmain.desktop
@@ -135,7 +135,7 @@ Keywords[et]=korganizer,peamine,isiklik
 Keywords[eu]=korganizer,nagusia,pertsonala
 Keywords[fa]=korganizer،اصلی، شخصی
 Keywords[fi]=korganizer,pää,henkilökohtainen
-Keywords[fr]=KOrganizer,principal,personnel
+Keywords[fr]=korganizer,principal,personnel
 Keywords[fy]=korganizer,algemien, persoanlik
 Keywords[gl]=korganizer,principal,persoal
 Keywords[he]=korganizer,main,personal,ארגונית,תצורה,הגדרה,הגדרות
