--- a/korganizer_configplugins.desktop
+++ b/korganizer_configplugins.desktop
@@ -125,7 +125,7 @@ Keywords[et]=korganizer,plugin,moodul
 Keywords[eu]=korganizer,plugin-a,modulua
 Keywords[fa]=korganizer،وصله، پیمانه
 Keywords[fi]=korganizer,liitännäinen,moduuli
-Keywords[fr]=KOrganizer,module
+Keywords[fr]=korganizer,module
 Keywords[ga]=korganizer,breiseán,modúl
 Keywords[gl]=korganizer,extensión,módulo
 Keywords[he]=korganizer,plugin,module,מודול,תוסף,ארגונית
