--- a/korganizer_configtime.desktop
+++ b/korganizer_configtime.desktop
@@ -141,7 +141,7 @@ Keywords[et]=korganizer,aeg
 Keywords[eu]=korganizer,ordua,data
 Keywords[fa]=korganizer،زمان
 Keywords[fi]=korganizer,aika
-Keywords[fr]=KOrganizer,date
+Keywords[fr]=korganizer,date
 Keywords[fy]=datum,tijd,tiid,korganizer
 Keywords[ga]=korganizer,am
 Keywords[gl]=korganizer,hora
