--- a/korganizer_configviews.desktop
+++ b/korganizer_configviews.desktop
@@ -138,7 +138,7 @@ Keywords[et]=korganizer,vaade
 Keywords[eu]=korganizer,ikuspegia
 Keywords[fa]=korganizer،نما
 Keywords[fi]=korganizer,näkymä
-Keywords[fr]=KOrganizer,vues
+Keywords[fr]=korganizer,vues
 Keywords[fy]=korganizer,weergave, werjefte
 Keywords[ga]=korganizer,amharc
 Keywords[gl]=korganizer,vista
