SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.1/kdepim/; revision=848139

--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -13,7 +13,7 @@ Name[et]=Päeviku trükkimise stiil
 Name[eu]=Egunkariak inprimatzeko estiloa
 Name[fa]=سبک چاپ نشریه
 Name[fi]=Päiväkirjan tulostustyyli
-Name[fr]=Impression en journal
+Name[fr]=Style d'impression du journal
 Name[fy]=Printstyl foar journaals
 Name[ga]=Stíl Phriontála Dialainne
 Name[gl]=Estilo de Impresión do Xornal
@@ -60,7 +60,7 @@ Comment[et]=See plugin võimaldab trükkida päeviku sissekandeid.
 Comment[eu]=Plugin honek egunkarien sarrerak (eguneroko sarrerak) inprimatzeko aukera ematen dizu.
 Comment[fa]=این وصله، به شما اجازه می‌دهد که مدخلهای نشریه )مدخلهای روزانه( را چاپ کنید.
 Comment[fi]=Tämä liitännäinen mahdollistaa päiväkirjan tulostuksen.
-Comment[fr]=Ce module vous permet d'imprimer l'ensemble de vos journaux personnels
+Comment[fr]=Ce module vous permet d'imprimer les entrées de votre journal
 Comment[ga]=Leis an mbreiseán seo is féidir leat iontrálacha dialainne a phriontáil.
 Comment[gl]=Esta extensión permítelle imprimir as entradas do xornal (entradas do diario).
 Comment[hu]=Ez a modul naplóbejegyzések kinyomtatását teszi lehetővé.
