--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -13,7 +13,7 @@ Name[et]="Mis järgmiseks?" trükkimise stiil
 Name[eu]="Zer da hurrengoa" inprimatzeko estiloa
 Name[fa]=سبک چاپ بعدی چیست
 Name[fi]=Mitä seuraavaksi -tulostustyyli
-Name[fr]=Impression de la suite du programme
+Name[fr]=Impression des évènements à venir
 Name[fy]=Printstyl foar Wat komt der no
 Name[ga]=Priontáil Rudaí Le Teacht
 Name[gl]=Estilo de Impresión de Quen Ven Agora
