--- a/plugins/printing/year/yearprint.desktop
+++ b/plugins/printing/year/yearprint.desktop
@@ -12,7 +12,7 @@ Name[es]=Estilo de impresión anual
 Name[et]=Aastakalendri trükkimise stiil
 Name[fa]=سبک چاپ نشریه
 Name[fi]=Päiväkirjan tulostustyyli
-Name[fr]=Impression annuelle
+Name[fr]=Impression par année
 Name[fy]=Printstyl foar jierkalinder
 Name[ga]=Stíl Bhliantúil Phriontála
 Name[gl]=Estilo de Impresión Anual
