SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.1/kdepim/; revision=863770

--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -5,7 +5,7 @@ Name[af]=Joernaal druk styl
 Name[ca]=Estil d'impressió del diari
 Name[cs]=Tiskový styl deníku
 Name[da]=Journal udskriftsstil
-Name[de]=Journal Druckstil
+Name[de]=Journal-Druckstil
 Name[el]=Στυλ εκτύπωσης χρονικού
 Name[eo]=Ĵurnal-Presostilo
 Name[es]=Estilo de impresión del diario
