--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -5,7 +5,7 @@ Name[af]=Lys druk styl
 Name[ca]=Estil d'impressió en llista
 Name[cs]=Styl deníku - seznam
 Name[da]=Listeudskriftsstil
-Name[de]=Listen Druckstil
+Name[de]=Listen-Druckstil
 Name[el]=Στυλ εκτύπωσης λίστας
 Name[eo]=List-Presostilo
 Name[es]=Estilo de impresión de listas
