--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -5,7 +5,7 @@ Name[af]=Wat is volgende - druk styl
 Name[ca]=Estil d'impressió Què toca ara?
 Name[cs]=Styl deníku - co je nového
 Name[da]=Hvad er det næste-udskriftsstil
-Name[de]=Was-kommt-als-nächstes Druckstil
+Name[de]=„Was kommt als nächstes“-Druckstil
 Name[el]=Στυλ εκτύπωσης 'Τί νέο υπάρχει'
 Name[eo]="Kio postsekvas"-Presostilo
 Name[es]=Estilo de impresión de «Qué es lo siguiente»
