SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.1/kdepim/; revision=872398

--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -20,7 +20,7 @@ Name[gl]=Estilo de Impresión do Xornal
 Name[hu]=Naplónyomtatási stílus
 Name[is]=Dagbókarprentstíll
 Name[it]=Stile di stampa a diario
-Name[ja]=ジャーナル印刷スタイル
+Name[ja]=日記印刷スタイル
 Name[ka]=ჟურნალის ბეჭდვის სტილი
 Name[kk]=Күнделікті басу стилі
 Name[km]=រចនាប័ទ្ម​បោះពុម្ព​ទិនានុប្បវត្តិ
@@ -66,7 +66,7 @@ Comment[gl]=Esta extensión permítelle imprimir as entradas do xornal (entradas
 Comment[hu]=Ez a modul naplóbejegyzések kinyomtatását teszi lehetővé.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út dagbókarfærslur.
 Comment[it]=Questo plugin ti permette di stampare le registrazioni del diario.
-Comment[ja]=このプラグインにより、ジャーナル (日誌) のエントリを印刷できるようになります。
+Comment[ja]=このプラグインにより、日記のエントリを印刷できるようになります。
 Comment[ka]=ეს მოდული საშუალებას გაძლევთ ამობეჭდოთ ჟურნალის შემადგენლობა (დღიურის ელემენტები)
 Comment[kk]=Бұл күнделіктің жазуларын басып шығаратын модулі.
 Comment[km]=កម្មវិធី​ជំនួយ​នេះ​អនុញ្ញាត​ឲ្យ​អ្នក​បោះពុម្ព​ធាតុ​ទិនានុប្បវត្តិ (ធាតុ​កំណត់ហេតុ​ប្រចាំ​ថ្ងៃ) ។
