SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.1/kdepim/; revision=874289

--- a/korganizer_configviews.desktop
+++ b/korganizer_configviews.desktop
@@ -34,7 +34,7 @@ Name[ga]=Amhairc
 Name[gl]=Vistas
 Name[he]=תצוגות
 Name[hu]=Nézetek
-Name[is]=Sýn
+Name[is]=Sýnir
 Name[it]=Viste
 Name[ja]=ビューア
 Name[ka]=ხედები
