--- a/interfaces/korganizer/CMakeLists.txt
+++ b/interfaces/korganizer/CMakeLists.txt
@@ -15,7 +15,7 @@ kde4_add_library(korganizer_interfaces SHARED ${korganizer_interfaces_LIB_SRCS})
 target_link_libraries(korganizer_interfaces  ${KDE4_KIO_LIBS}  )
 
 set_target_properties(korganizer_interfaces PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
-install(TARGETS korganizer_interfaces  DESTINATION ${LIB_INSTALL_DIR})
+install(TARGETS korganizer_interfaces ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 
 ########### install files ###############
