SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=881804

--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -8,7 +8,7 @@ Name[es]=Interfaz de decoración del calendario
 Name[et]=Kalendri dekoratsiooni liides
 Name[fr]=Interface de décoration d'agenda
 Name[ga]=Comhéadan Maisíochta Féilire
-Name[gl]=Interface de Decoración de Calendarios
+Name[gl]=Interface de DecoraciÃ³n de Calendarios
 Name[it]=Interfaccia di decorazione del calendario
 Name[ja]=カレンダー装飾インターフェース
 Name[km]=ចំណុច​ប្រទាក់​តុបតែង​ប្រតិទិន
@@ -48,7 +48,7 @@ Comment[fi]=Kalenteritekstin koristeluliitännäinen
 Comment[fr]=Module de décoration d'agenda
 Comment[fy]=Agindadekoraasjeplugin
 Comment[ga]=Breiseán Maisíochta Féilire
-Comment[gl]=Extensión para a Decoración do Calendario
+Comment[gl]=ExtensiÃ³n para a DecoraciÃ³n do Calendario
 Comment[he]=תוסף קישוטי לוח שנה
 Comment[hr]=Dodatak za dekoraciju kalendara
 Comment[hu]=Naptármegjelenési bővítőmodul
