--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -8,7 +8,7 @@ Name[es]=Complemento de interfaz del calendario
 Name[et]=Kalendriplugina liides
 Name[fr]=Interface de module d'agenda
 Name[ga]=Comhéadan Breiseáin Féilire
-Name[gl]=Interface da Extensión do Calendario
+Name[gl]=Interface da ExtensiÃ³n do Calendario
 Name[it]=Interfaccia del plugin calendario
 Name[ja]=カレンダープラグインインターフェース
 Name[km]=ប្រតិទិន​កម្មវិធី​ជំនួយ​ប្រតិទិន
@@ -48,7 +48,7 @@ Comment[fi]=Kalenteriliitännäinen
 Comment[fr]=Module d'agenda
 Comment[fy]=Agindaplugin
 Comment[ga]=Breiseán Féilire
-Comment[gl]=Extensión de Calendario
+Comment[gl]=ExtensiÃ³n de Calendario
 Comment[he]=תוסף לוח שנה
 Comment[hr]=Kalendar dodatak
 Comment[hu]=Naptárkezelő bővítőmodul
