--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -22,7 +22,7 @@ Name[et]=Värvid ja fondid
 Name[fi]=Värit ja kirjasimet
 Name[fr]=Couleurs et polices
 Name[ga]=Dathanna agus Clónna
-Name[gl]=Cores e Tipografía
+Name[gl]=Cores e TipografÃ­a
 Name[it]=Colori e tipi di carattere
 Name[ja]=色とフォント
 Name[km]=ពណ៌ និង​ពុម្ពអក្សរ
@@ -55,7 +55,7 @@ Comment[fa]=پیکربندی رنگها و قلمهای KOrganizer
 Comment[fi]=KOrganizer värien asetukset
 Comment[fr]=Configuration des couleurs et des polices de KOrganizer
 Comment[ga]=Cumraíocht na nDathanna/gClónna le haghaidh KOrganizer
-Comment[gl]=Configuración de Cores e Tipos de Letra de KOrganizer
+Comment[gl]=ConfiguraciÃ³n de Cores e Tipos de Letra de KOrganizer
 Comment[it]=Configurazione dei colori e dei tipi di carattere di KOrganizer
 Comment[ja]=KOrganizer 色とフォントの設定
 Comment[km]=ការ​កំណត់​រចនាសម្ព័ន្ធ​ពុម្ពអក្សរ និង​ពណ៌ KOrganizer
