--- a/kcmconfigs/korganizer_configtime.desktop
+++ b/kcmconfigs/korganizer_configtime.desktop
@@ -56,7 +56,7 @@ Comment[et]=KOrganizeri ajaseadistused
 Comment[fi]=KOrganizerin aika-asetukset
 Comment[fr]=Configuration de la date et l'heure de KOrganizer
 Comment[ga]=Cumraíocht Ama agus Dáta le haghaidh KOrganizer
-Comment[gl]=Configuración de Hora e Data de KOrganizer
+Comment[gl]=ConfiguraciÃ³n de Hora e Data de KOrganizer
 Comment[it]=Configurazione data e ora di KOrganizer
 Comment[ja]=KOrganizer 日付と時間の設定
 Comment[km]=កា​រកំណត់​រចនាសម្ព័ន្ធ​កាលបរិច្ឆេទ និង​ពេលវេលា KOrganizer
