--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -18,7 +18,7 @@ Name[fi]=Juutalaisen kalenterin laajennus
 Name[fr]=Module de prise en charge du calendrier juif
 Name[fy]=Joadske kalenderplugin
 Name[ga]=Breiseán Féilire Giúdaí
-Name[gl]=Extensión para Calendario Xudeu
+Name[gl]=ExtensiÃ³n para Calendario Xudeu
 Name[hu]=Bővítőmodul a zsidó naptár kezeléséhez
 Name[is]=Gyðinga dagatalsíforrit
 Name[it]=Plugin calendario ebraico
@@ -61,7 +61,7 @@ Comment[et]=Näitab KOrganizeris kõiki kuupäevi ka juudi kalendri järgi.
 Comment[fa]=همۀ تاریخهای KOrganizer، همچنین سیستم تقویم یهودی را نمایش می‌دهد.
 Comment[fi]=Näyttää kaikki päivät KOrganizerissa myös juutalaisen kalenterin mukaan.
 Comment[fr]=Affiche toutes les dates de KOrganizer selon le calendrier Juif.
-Comment[gl]=Amosa todas as datas en KOrganizer tamén no sistema de calendario xudeu.
+Comment[gl]=Amosa todas as datas en KOrganizer tamÃ©n no sistema de calendario xudeu.
 Comment[it]=Mostra tutte le date in korganizer anche secondo il calendario ebraico.
 Comment[ja]=KOrganizer のすべての日付をユダヤ暦でも表示します。
 Comment[km]=បង្ហាញ​កាលបរិច្ឆេទ​ទាំងអស់​នៅ​ក្នុង KOrganizer នៅ​ក្នុង​ប្រព័ន្ធ​ប្រតិទិន Jewish ផងដែរ ​​។
