--- a/plugins/printing/journal/journalprint.desktop
+++ b/plugins/printing/journal/journalprint.desktop
@@ -16,7 +16,7 @@ Name[fi]=Päiväkirjan tulostustyyli
 Name[fr]=Style d'impression du journal
 Name[fy]=Printstyl foar journaals
 Name[ga]=Stíl Phriontála Dialainne
-Name[gl]=Estilo de Impresión do Xornal
+Name[gl]=Estilo de ImpresiÃ³n do Xornal
 Name[hu]=Naplónyomtatási stílus
 Name[is]=Dagbókarprentstíll
 Name[it]=Stile di stampa a diario
@@ -62,7 +62,7 @@ Comment[fa]=این وصله، به شما اجازه می‌دهد که مدخل
 Comment[fi]=Tämä liitännäinen mahdollistaa päiväkirjan tulostuksen.
 Comment[fr]=Ce module vous permet d'imprimer les entrées de votre journal
 Comment[ga]=Leis an mbreiseán seo is féidir leat iontrálacha dialainne a phriontáil.
-Comment[gl]=Esta extensión permítelle imprimir as entradas do xornal (entradas do diario).
+Comment[gl]=Esta extensiÃ³n permÃ­telle imprimir as entradas do xornal (entradas do diario).
 Comment[hu]=Ez a modul naplóbejegyzések kinyomtatását teszi lehetővé.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út dagbókarfærslur.
 Comment[it]=Questo plugin ti permette di stampare le registrazioni del diario.
