--- a/plugins/printing/whatsnext/whatsnextprint.desktop
+++ b/plugins/printing/whatsnext/whatsnextprint.desktop
@@ -16,7 +16,7 @@ Name[fi]=Mitä seuraavaksi -tulostustyyli
 Name[fr]=Impression des évènements à venir
 Name[fy]=Printstyl foar Wat komt der no
 Name[ga]=Priontáil Rudaí Le Teacht
-Name[gl]=Estilo de Impresión de Quen Ven Agora
+Name[gl]=Estilo de ImpresiÃ³n de Quen Ven Agora
 Name[hu]=A közeljövő eseményeinek kinyomtatása
 Name[is]=Hvað er næst prentstíll
 Name[it]=Stile di stampa "cosa viene dopo"
@@ -59,7 +59,7 @@ Comment[eu]=Plugin honek gertatuko diren gertaera eta egitekoen zerrenda bat inp
 Comment[fa]=این وصله به شما اجازه می‌دهد که فهرستی از همۀ رویدادها و کارهای انجامی که بالا می‌آیند را چاپ کنید.
 Comment[fi]=Tämä liitännäinen mahdollistaa tulevien tapahtumien ja tehtävien tulostuksen listana.
 Comment[fr]=Ce module vous permet d'imprimer la liste des prochaines évènements et des prochaines tâches.
-Comment[gl]=Esta extensión permítelle imprimir unha listaxe de todos os eventos e tarefas vindeiros.
+Comment[gl]=Esta extensiÃ³n permÃ­telle imprimir unha listaxe de todos os eventos e tarefas vindeiros.
 Comment[hu]=Ezzel a modullal kinyomtathatók a rövidesen aktuálissá váló feladatok és események.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út lista yfir alla væntanlega atburði og verkþætti.
 Comment[it]=Questo plugin vi permette di stampare una lista dei prossimi eventi e cose da fare.
