--- a/plugins/datenums/datenums.desktop
+++ b/plugins/datenums/datenums.desktop
@@ -16,7 +16,7 @@ Name[fa]=وصلۀ عدد تاریخ برای تقویمها
 Name[fi]=Päivämääräliitännäinen kalentereihin
 Name[fr]=Module de numérotation des jours
 Name[fy]=Datumgetallenplugin foar aginda's
-Name[gl]=Extensión para Números dos Días nos Calendarios
+Name[gl]=ExtensiÃ³n para NÃºmeros dos DÃ­as nos Calendarios
 Name[he]=תוסף מספרי תאריכים ללוחות שנה
 Name[hu]=Dátumkezelő bővítőmodul naptárakhoz
 Name[is]=Íforrit fyrir númer dags á dagatali
@@ -62,7 +62,7 @@ Comment[eu]=Egun bakoitzeko, plugin honek bere urteko egun-zenbakia erakutsiko d
 Comment[fa]=در هر روز، این وصله عدد مربوط به روز سال را در بالای نمای agenda  نمایش می‌دهد. مثلاً ۱ فوریه، سی و دومین روز سال می‌باشد.
 Comment[fi]=Tämä liitännäinen näyttää jokaisen päivän järjestysnumeron vuoden alusta agendanäkymässä. Esimerkiksi helmikuun ensimmäinen päivä on vuoden 32. päivä.
 Comment[fr]=Pour chaque jour, ce module montre le numéro du jour en haut de la vue agenda. Par exemple, le 1er février est le 32ème jour de l'année.
-Comment[gl]=Esta extensión amosa o día do ano na vista superior da axenda. Por exemplo, o 1 de febreiro é o día 32 do ano.
+Comment[gl]=Esta extensiÃ³n amosa o dÃ­a do ano na vista superior da axenda. Por exemplo, o 1 de febreiro Ã© o dÃ­a 32 do ano.
 Comment[hu]=Megjeleníti az év elejétől eltelt napok számát az áttekintő nézet tetején. Például február elseje az év 32. napja.
 Comment[is]=Þetta íforrit sýnir efst í fundarskránni númer hvers dags í árinu. T.d. er 1. febrúar 32. dagurinn í árinu.
 Comment[it]=Per ciascun giorno, questo plugin mostra la data giuliana (numero progressivo a partire dal primo gennaio dell'anno corrente). Per esempio al primo di febbraio corrisponde il numero 32.
