SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=888889

--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -30,7 +30,7 @@ Name[fi]=Omat sivut
 Name[fr]=Pages personnalisées
 Name[fy]=Oanpaste siden
 Name[ga]=Leathanaigh Shaincheaptha
-Name[gl]=PÃ¡xinas Personalizadas
+Name[gl]=Páxinas Personalizadas
 Name[he]=דפים מותאמים אישית
 Name[hu]=Egyéni lapok
 Name[is]=Sérsniðnar síður
@@ -83,7 +83,7 @@ Comment[fi]=Muokkaa omia sivuja
 Comment[fr]=Configurer les pages personnalisées
 Comment[fy]=Hjir kinne jo de oanpaste siden ynstelle
 Comment[ga]=Cumraigh na Leathanaigh Shaincheaptha
-Comment[gl]=Configurar as PÃ¡xinas Personalizadas
+Comment[gl]=Configurar as Páxinas Personalizadas
 Comment[he]=הגדר את הדפים המותאמים אישית
 Comment[hu]=Az egyéni lapok beállítása
 Comment[is]=Stilla sérsniðnu síðurnar
