--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -84,7 +84,7 @@ Comment[fi]=KOrganizer vapaa/varattu asetukset
 Comment[fr]=Configuration de la disponibilité pour KOrganizer
 Comment[fy]=KOrganizer frij/beset ynstelle
 Comment[ga]=Cumraíocht Saor/Gafa KOrganizer
-Comment[gl]=ConfiguraciÃ³n de DispoÃ±ibilidade de Korganizer
+Comment[gl]=Configuración de Dispoñibilidade de Korganizer
 Comment[hu]=KOrganizer foglaltsági beállítások
 Comment[is]=KOrganizer stillingar fyrir tímaráðstöfun
 Comment[it]=Configurazione Libero/Occupato di KOrganizer
