--- a/kcmconfigs/korganizer_configgroupscheduling.desktop
+++ b/kcmconfigs/korganizer_configgroupscheduling.desktop
@@ -29,7 +29,7 @@ Name[fi]=Ryhmän aikataulut
 Name[fr]=Planification des tâches
 Name[fy]=Groepsplanning
 Name[ga]=Sceidealadh Grúpa
-Name[gl]=OrganizaciÃ³n de Grupo
+Name[gl]=Organización de Grupo
 Name[hu]=Szervezés
 Name[is]=Hópáætlun
 Name[it]=Programmazione gruppi
@@ -81,7 +81,7 @@ Comment[fi]=KOrganizer ryhmien aikataulujen asetukset
 Comment[fr]=Configuration de la planification des groupes de KOrganizer
 Comment[fy]=KOrganizer groepsplanning ynstelle
 Comment[ga]=Cumraíocht Sceidealta Grúpa KOrganizer
-Comment[gl]=ConfiguraciÃ³n da Axenda de Grupo de KOrganizer
+Comment[gl]=Configuración da Axenda de Grupo de KOrganizer
 Comment[hu]=KOrganizer szervezési beállítások
 Comment[is]=Stillingar fyrir KOrganizer hópáætlun
 Comment[it]=Configurazione del programmatore gruppi di KOrganizer
