--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -30,7 +30,7 @@ Name[fa]=وصله‌ها
 Name[fi]=Liitännäiset
 Name[fr]=Modules externes
 Name[ga]=Breiseáin
-Name[gl]=ExtensiÃ³ns
+Name[gl]=Extensións
 Name[he]=תוספים
 Name[hu]=Bővítőmodulok
 Name[is]=Íforrit
@@ -84,7 +84,7 @@ Comment[fi]=KOrganizerin liitännäisen asetukset
 Comment[fr]=Configuration du module KOrganizer
 Comment[fy]=KOrganizer pluginynstellings
 Comment[ga]=Cumraíocht Breiseán KOrganizer
-Comment[gl]=ConfiguraciÃ³n de ExtensiÃ³ns de KOrganizer
+Comment[gl]=Configuración das Extensións do KOrganizer
 Comment[he]=הגדרות תוסף הארגונית
 Comment[hu]=A KOrganizer bővítőmodul beállításai
 Comment[is]=Stillingar KOrganizer íforrita
