--- a/korgac/korgac.desktop
+++ b/korgac/korgac.desktop
@@ -17,7 +17,7 @@ Name[fi]=KOrganizer-hälytysasiakas
 Name[fr]=Client d'alarme de KOrganizer
 Name[fy]=KOrganizer omtinkerdaemon
 Name[ga]=Cliant Meabhrúchán KOrganizer
-Name[gl]=Cliente de Lembranzas de KOrganizer
+Name[gl]=Cliente de Lembranzas do KOrganizer
 Name[hu]=KOrganizer-emlékeztető kliens
 Name[is]=Áminningarforrit fyrir KOrganizer
 Name[it]=Client degli avvisi di KOrganizer
@@ -66,7 +66,7 @@ GenericName[fi]=KOrganizer hälytyspalvelimen asiakas
 GenericName[fr]=Client pour le démon d'alarme de KOrganizer
 GenericName[fy]=KOrganizer omtinkerdaemon
 GenericName[ga]=Cliant Deamhain Meabhrúchán KOrganizer
-GenericName[gl]=Cliente do Servizo de Lembranzas de KOrganizer
+GenericName[gl]=Cliente do Servizo de Lembranzas do KOrganizer
 GenericName[hu]=KOrganizer emlékeztető szolgáltatás kliense
 GenericName[is]=Áminningarpúki fyrir KOrganizer
 GenericName[it]=Client del demone degli avvisi di KOrganizer
