--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -11,7 +11,7 @@ Name[et]=Wikipedia päevapildi plugin kalendritele
 Name[fa]=عکس ویکی پدیا از وصلۀ روز برای تقویمها
 Name[fi]=Wikipedian päivän kuva -liitännäinen
 Name[fr]=Module externe « Image du jour » de Wikipédia
-Name[gl]=ExtensiÃ³n para a Imaxe do DÃ­a da Wikipedia nos Calendarios
+Name[gl]=Extensión para a Imaxe do Dí­a da Wikipedia nos Calendarios
 Name[it]=Plugin "foto del giorno" da Wikipedia per i calendari
 Name[ja]=Wikipedia 今日の写真プラグイン
 Name[km]=រូបភាព​របស់ Wikipedia នៃ​​កម្មវិធី​ជំនួយ​ថ្ងៃ​សម្រាប់​ប្រតិទិន
