--- a/plugins/printing/list/listprint.desktop
+++ b/plugins/printing/list/listprint.desktop
@@ -16,7 +16,7 @@ Name[fi]=Listatulostustyyli
 Name[fr]=Impression en liste
 Name[fy]=Printstyl foar listen
 Name[ga]=Priontáil mar Liosta
-Name[gl]=Estilo de ImpresiÃ³n das Listas
+Name[gl]=Estilo de Impresión das Listas
 Name[hu]=Eseménylista kinyomtatása
 Name[is]=Listaprentstíll
 Name[it]=Stile di stampa ad elenco
@@ -61,7 +61,7 @@ Comment[eu]=Plugin honek gertaerak eta egitekoak zerrenda moduan inprimatzeko au
 Comment[fa]=این وصله به شما اجازه می‌دهد که رویدادها و کارهای انجامی را در برگۀ فهرست چاپ کنید.
 Comment[fi]=Tämä liitännäinen mahdollistaa tapahtumien ja tehtävien tulostuksen listana.
 Comment[fr]=Ce module vous permet d'imprimer les évènements et les tâches sous forme de liste
-Comment[gl]=Esta extensiÃ³n permÃ­telle imprimir os eventos e as tarefas en forma de listaxe.
+Comment[gl]=Esta extensión permí­telle imprimir os eventos e as tarefas en forma de listaxe.
 Comment[hu]=Ezzel a modullal listaként kinyomtathatók a feladatok és események.
 Comment[is]=Þetta íforrit gerir þér kleyft að prenta út lista með atburðum og verkþáttum.
 Comment[it]=Questo plugin ti permette di stampare eventi e cose da fare in modalità elenco.
