--- a/plugins/thisdayinhistory/thisdayinhistory.desktop
+++ b/plugins/thisdayinhistory/thisdayinhistory.desktop
@@ -9,7 +9,7 @@ Name[es]=Complemento de «Este día en la historia» de la Wikipedia
 Name[et]=Wikipedia 'täna ajaloos' plugin
 Name[fi]=Wikipedian "Tämä päivä historiassa" -liitännäinen
 Name[fr]=Module externe « Ce jour dans l'histoire » d'après Wikipédia
-Name[gl]=ExtensiÃ³n "Este DÃ­a na Historia" da Wikipedia
+Name[gl]=Extensión "Este Dí­a na Historia" da Wikipedia
 Name[it]=Plugin "Questo giorno nella storia" da Wikipedia
 Name[ja]=Wikipedia 今日は何の日プラグイン
 Name[km]=កម្មវិធី 'ថ្ងៃនេះ​ក្នុង​ប្រវត្តិ' របស់វីគីភីឌៀ
