--- a/plugins/timespanview/timespanview.desktop
+++ b/plugins/timespanview/timespanview.desktop
@@ -15,7 +15,7 @@ Name[fa]=وصلۀ نمای گسترۀ زمان برای KOrganizer
 Name[fi]=Aikavälin näyttöliitännäinen Korganizeriin
 Name[fr]=Module d'affichage de planification pour KOrganizer
 Name[fy]=Tiidspanneplugin foar KOrganizer
-Name[gl]=ExtensiÃ³n de Vista en Unidades de Tempo para KOrganizer
+Name[gl]=Extensión de Vista en Unidades de Tempo para KOrganizer
 Name[hu]=Időszakáttekintő bővítőmodul a KOrganizerhez
 Name[is]=Tímabilsskoðunar íforrit fyrir KOrganizer
 Name[it]=Plugin vista intervalli temporali per KOrganizer
@@ -58,7 +58,7 @@ Comment[eu]=Plugin honek KOrganizer-entzat denbora barruti ikuspegi bat eskeintz
 Comment[fa]=این وصله، برای KOrganizer یک نمای گسترۀ زمان )مثل نماهای کارهای انجامی یا ماهانه( فراهم می‌‌کند. اگر این وصله را فعال کنید، می‌توانید به گسترۀ زمان سودهی کرده و مانند نمودار  Gantt، رویدادهای خود را مشاهده کنید.
 Comment[fi]=Tämä liitännäinen mahdollistaa ajanjaksonäkymän KOrganizeriin (kuten tehtävälista- tai kuukausinäkymän). Jos otat tämän liitännäisen käyttöön.  voit vaihtaa aikavälin näyttöön ja tarkastella tapahtumia kuten Gantt-diagrammissa.
 Comment[fr]=Ce module vous permet d'avoir une vue de KOrganizer qui affiche les évènements selon l'axe temporel. Si vous activez cette vue, vous verrez vos évènements comme un diagramme de Gantt.
-Comment[gl]=Esta extensiÃ³n fornece unha vista en unidades de tempo (como as vistas mensuais e a vista de tarefas). Se habilita esta extensiÃ³n, pode trocar a vista en unidades de tempo e ver os seus eventos como un diagrama de Gantt.
+Comment[gl]=Esta extensión fornece unha vista en unidades de tempo (como as vistas mensuais e a vista de tarefas). Se activa esta extensión, pode trocar a vista en unidades de tempo e ver os seus eventos como unha gráfica de Gantt.
 Comment[hu]=Ezzel modullal egy időszakot lehet áttekinteni a KOrganizerben (például a feladatokat vagy a havi nézeteket). Ha aktiválja ezt a modult, átválthat időszakos nézetbe, hogy az események Gantt-diagramon legyenek megtekinthetők.
 Comment[is]=Þetta íforrit veitir tímabilssýn fyrir KOrganizer (svipað og verkþátta eða mánaðarsýn). Ef þú virkjar þetta íforrit getur þú skipt yfir í tímabilssýn og skoðað atburðina þína eins og á Gantt skýringarmynd.
 Comment[it]=Questo plugin fornisce una vista a intervalli temporali. Se abiliti questo plugin, potrai passare alla vista a intervalli temporali e vedere i tuoi eventi come in un diagramma di Gantt.
