SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/; revision=892529

--- a/korganizer-import.desktop
+++ b/korganizer-import.desktop
@@ -124,7 +124,7 @@ GenericName[sl]=Osebni organizator
 GenericName[sv]=Filofax
 GenericName[ta]=தனிப்பயன் அமைப்பாளர்
 GenericName[tg]=Органайзери инфиродӣ
-GenericName[tr]=Kişisel Bilgi Yöneticisi
+GenericName[tr]=Kişisel Yönetim Sistemi
 GenericName[uk]=Персональний тижневик
 GenericName[uz]=Shaxsiy organayzer
 GenericName[uz@cyrillic]=Шахсий органайзер
