--- a/korganizerui.rc
+++ b/korganizerui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="korganizer" version="410">
+<kpartgui name="korganizer" version="414">
 
   <MenuBar>
     <Menu name="file"><text>&amp;File</text>
@@ -132,7 +132,7 @@
     <Action name="go_today"/>
   </ToolBar>
 
-  <ToolBar name="korganizer_toolbar"><text>Views</text>
+  <ToolBar noMerge="1" name="korganizer_toolbar"><text>Views</text>
     <Action name="view_day"/>
     <Action name="view_week"/>
     <Action name="view_month"/>
@@ -141,14 +141,14 @@
     <Merge/>
   </ToolBar>
 
-  <ToolBar name="schedule_toolbar" hidden="true"><text>Schedule</text>
+  <ToolBar noMerge="1" name="schedule_toolbar" hidden="true"><text>Schedule</text>
     <Action name="schedule_publish"/>
     <Action name="schedule_request"/>
     <Action name="schedule_reply"/>
     <Action name="addressbook"/>
   </ToolBar>
 
-  <ToolBar name="filter_toolbar" hidden="true"><text>Filters Toolbar</text>
+  <ToolBar noMerge="1" name="filter_toolbar" hidden="true"><text>Filters Toolbar</text>
     <Action name="filter_label"/>
     <Action name="filter_select"/>
     <Action name="edit_filters"/>
