SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepim/akregator/; revision=893874

--- a/dbuscalendar.desktop
+++ b/dbuscalendar.desktop
@@ -10,6 +10,7 @@ Name[nb]=DBUSKalender
 Name[nds]=D-Bus-Kalenner
 Name[pl]=KalendarzDBUS
 Name[pt]=Calendário DBUS
+Name[ro]=CalendarDBUS
 Name[sv]=DBus-kalender
 Name[x-test]=xxDBUSCalendarxx
 Name[zh_TW]=DBUS行事曆
@@ -41,6 +42,7 @@ Comment[nn]=Organiserar med eit D-Bus-grensesnitt
 Comment[pl]=Organizator z interfejsem D-BUS
 Comment[pt]=Organizador com uma interface de D-BUS
 Comment[pt_BR]=Organizador com interface D-BUS
+Comment[ro]=Organizator cu interfață D-Bus
 Comment[sl]=Oragnizator z vmesnikom D-BUS
 Comment[sv]=Filofax med DBus-gränssnitt
 Comment[tr]=D-BUS arayüzü kullanan Organizer
