--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -20,6 +20,7 @@ Name[nn]=Grensesnitt til kalenderpynt
 Name[pl]=Interfejs do dekoracji kalendarza
 Name[pt]=Interface de Decoração do Calendário
 Name[pt_BR]=Interface para Decoração do Calendário
+Name[ro]=Interfață decorare calendar
 Name[sl]=Vmesnik za okraševanje koledarja
 Name[sv]=Gränssnitt för kalenderdekoration
 Name[tr]=Takvim Dekorasyon Arayüzü
