--- a/kcmconfigs/korganizer_configdesignerfields.desktop
+++ b/kcmconfigs/korganizer_configdesignerfields.desktop
@@ -53,6 +53,7 @@ Name[pa]=ਕਸਟਮ ਪੇਜ਼
 Name[pl]=Własne strony
 Name[pt]=Páginas Personalizadas
 Name[pt_BR]=Páginas Personalizadas
+Name[ro]=Pagini personalizate
 Name[ru]=Дополнительные поля
 Name[se]=Iežat siiddut
 Name[sk]=Vlastné stránky
@@ -106,6 +107,7 @@ Comment[pa]=ਕਸਟਮ ਪੇਜ਼ ਸੰਰਚਨਾ
 Comment[pl]=Konfiguracja własnych stron
 Comment[pt]=Configurar as Páginas Personalizadas
 Comment[pt_BR]=Configurar Páginas Personalizadas
+Comment[ro]=Configurează paginile personalizate
 Comment[ru]=Настройка пользовательских вкладок
 Comment[se]=Heivet iežat siidduid
 Comment[sk]=Nastavenie vlastných stránok
