--- a/kcmconfigs/korganizer_configfreebusy.desktop
+++ b/kcmconfigs/korganizer_configfreebusy.desktop
@@ -52,6 +52,7 @@ Name[pa]=ਵੇਹਲਾ/ਰੁਝਿਆ
 Name[pl]=Wolny/zajęty
 Name[pt]=Livre/Ocupado
 Name[pt_BR]=Livre/Ocupado
+Name[ro]=Liber/ocupat
 Name[ru]=Занятое время
 Name[sk]=Voľný čas
 Name[sl]=Prost/zaseden
