--- a/kcmconfigs/korganizer_configplugins.desktop
+++ b/kcmconfigs/korganizer_configplugins.desktop
@@ -53,6 +53,7 @@ Name[pa]=ਪਲੱਗਇਨਾਂ
 Name[pl]=Wtyczki
 Name[pt]='Plugins'
 Name[pt_BR]=Plug-ins
+Name[ro]=Module
 Name[ru]=Модули
 Name[sk]=Moduly
 Name[sl]=Vstavki
@@ -106,6 +107,7 @@ Comment[nn]=Oppsett av KOrganizer-programtillegg
 Comment[pl]=Konfiguracja wtyczek KOrganizera
 Comment[pt]=Configuração de 'Plugins' do KOrganizer
 Comment[pt_BR]=Configuração dos Plug-ins do KOrganizer
+Comment[ro]=Configurare module KOrganizer
 Comment[ru]=Настройки модулей органайзера KDE
 Comment[sk]=Nastavenie modulu KOrganizer
 Comment[sl]=Nastavitve vstavka KOrganizerja
