--- a/kcmconfigs/korganizer_configviews.desktop
+++ b/kcmconfigs/korganizer_configviews.desktop
@@ -110,6 +110,7 @@ Comment[nn]=Visingsoppsett for KOrganizer
 Comment[pl]=Konfiguracja widoków KOrganizera
 Comment[pt]=Configuração das Janelas do KOrganizer
 Comment[pt_BR]=Configuração de Visões do KOrganizer
+Comment[ro]=Configurare vizualizări KOrganizer
 Comment[ru]=Настройка видов органайзера KDE
 Comment[sk]=Nastavenie pohľadov pre KOrganizer
 Comment[sl]=Nastavitev prikaza KOrganizerja
