--- a/plugins/hebrew/hebrew.desktop
+++ b/plugins/hebrew/hebrew.desktop
@@ -39,6 +39,7 @@ Name[nn]=Kalender-programtillegg for jødisk kalender
 Name[pl]=Wtyczka kalendarza żydowskiego
 Name[pt]='Plugin' do Calendário Judeu
 Name[pt_BR]=Plug-in de Calendário Judaico
+Name[ro]=Modul calendar evreiesc
 Name[ru]=Еврейский календарь
 Name[sk]=Modul Židovského kalendára
 Name[sl]=Vstavek za židovski koledar
