--- a/interfaces/calendar/calendarplugin.desktop
+++ b/interfaces/calendar/calendarplugin.desktop
@@ -20,6 +20,7 @@ Name[nn]=Grensesnitt til kalender-programtillegg
 Name[pl]=Interfejs wtyczek do kalendarza
 Name[pt]=Interface do 'Plugin' de Calendário
 Name[pt_BR]=Interface do Plug-in de Calendário
+Name[ro]=Interfață Modul calendar
 Name[sl]=Vmesnik za koledarske vstavke
 Name[sv]=Insticksprogram för kalendergränssnitt
 Name[tr]=Takvim Eklentisi Arayüzü
