--- a/kcmconfigs/korganizer_configcolorsandfonts.desktop
+++ b/kcmconfigs/korganizer_configcolorsandfonts.desktop
@@ -36,6 +36,7 @@ Name[pa]=ਰੰਗ ਅਤੇ ਫੋਂਟ
 Name[pl]=Kolory i czcionki
 Name[pt]=Cores e Tipos de Letra
 Name[pt_BR]=Fontes e Cores
+Name[ro]=Culori și fonturi
 Name[sl]=Barve in pisave
 Name[sv]=Färger och teckensnitt
 Name[th]=สีและแบบอักษร
@@ -68,6 +69,7 @@ Comment[nn]=Oppsett av fargar og skrifter i KOrganizer
 Comment[pl]=Konfiguracja kolorów i czcionek KOrganizera
 Comment[pt]=Configuração de Cores e Tipos de Letra do KOrganizer
 Comment[pt_BR]=Configuração de Fontes e Cores do KOrganizer
+Comment[ro]=Configurare culori și fonturi KOrganizer
 Comment[sl]=Nastavitev barv in pisav v KOrganizerju
 Comment[sv]=Inställning av Korganizers färger och teckensnitt
 Comment[tr]=KOrganizer Renk ve Yazı Tipi Yapılandırması
