--- a/interfaces/calendar/calendardecoration.desktop
+++ b/interfaces/calendar/calendardecoration.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Calendar Decoration Interface
 Name[ca]=Interfície de decoració del calendari
+Name[cs]=Rozhraní dekorace kalendáře
 Name[da]=Kalenderdekorations-plugin
 Name[de]=Dekoration für den Kalender
 Name[el]=Διασύνδεση διακόσμησης ημερολογίου
