Don't install the .so symlink to private shared libraries as nothing else should be building against them using the installed copy of this file.
If these aren't really private I'll hear the screams from here.

Fixes https://bugzilla.novell.com:443/show_bug.cgi?id=420162 (KMail 3
fails to start if kdepim4-devel is installed due to symbol lookup
error).

svn path=/trunk/KDE/kdepim/akregator/; revision=895907

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,7 +239,7 @@ target_link_libraries(korganizerprivate ${KDE4_KNEWSTUFF2_LIBS} ${KDE4_KABC_LIBS
 
 set_target_properties(korganizerprivate PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
 
-install(TARGETS korganizerprivate ${INSTALL_TARGETS_DEFAULT_ARGS})
+install(TARGETS korganizerprivate ${INSTALL_TARGETS_DEFAULT_ARGS} LIBRARY NAMELINK_SKIP)
 
 
 ########### install files ###############
