provide a comment, which is used in the plugin configuration dialog to give the user more info about what the plugin does.
I have permission from kde-i18n-doc to add these, even though they
aren't new strings (I copied them from their respective .cpp files);
however, probably shouldn't backport because it does require
work on the translators part to add the translated strings into
the .desktop files.

svn path=/trunk/KDE/kdepim/; revision=897230

--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -10,7 +10,7 @@ Name[es]=Complemento de imagen del día de la Wikipedia para calendarios
 Name[et]=Wikipedia päevapildi plugin kalendritele
 Name[fa]=عکس ویکی پدیا از وصلۀ روز برای تقویمها
 Name[fi]=Wikipedian päivän kuva -liitännäinen
-Name[fr]=Module externe « Image du jour » de Wikipédia
+Name[fr]=Module externe « Image du jour » de Wikipédia
 Name[gl]=Extensión para a Imaxe do Dí­a da Wikipedia nos Calendarios
 Name[it]=Plugin "foto del giorno" da Wikipedia per i calendari
 Name[ja]=Wikipedia 今日の写真プラグイン
@@ -33,6 +33,7 @@ Name[x-test]=xxWikipedia Picture Of the Day Plugin for Calendarsxx
 Name[zh_CN]=日历的每日 Wikipedia 贴图插件
 Name[zh_TW]=行事曆維基「本日圖片」外掛程式
 Type=Service
+Comment=This plugin provides the Wikipedia Picture of the Day
 X-KDE-ServiceTypes=Calendar/Plugin,Calendar/Decoration
 X-KDE-KOrganizer-HasSettings=true
 X-KDE-PluginInterfaceVersion=2
