--- a/plugins/picoftheday/picoftheday.desktop
+++ b/plugins/picoftheday/picoftheday.desktop
@@ -34,6 +34,12 @@ Name[zh_CN]=日历的每日 Wikipedia 贴图插件
 Name[zh_TW]=行事曆維基「本日圖片」外掛程式
 Type=Service
 Comment=This plugin provides the Wikipedia Picture of the Day
+Comment[km]=កម្មវិធី​ជំនួយ​នេះ ផ្ដល់​នូវ​រូបភាព​ថ្ងៃនេះ​របស់ Wikipedia
+Comment[nds]=Dit Moduul stellt dat »Bild för Vundaag« vun Wikipedia praat
+Comment[pt]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
+Comment[pt_BR]=Este 'plugin' oferece a Imagem do Dia do Wikipédia
+Comment[sv]=Insticksprogrammet tillhandahåller Wikipedias 'Dagens bild'
+Comment[uk]=Цей додаток працює з «Зображеннями дня» з Вікіпедії
 X-KDE-ServiceTypes=Calendar/Plugin,Calendar/Decoration
 X-KDE-KOrganizer-HasSettings=true
 X-KDE-PluginInterfaceVersion=2
